--- a/01 Cards modular.ipynb
+++ b/01 Cards modular.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO28FswSXd1Fyk7ybZjSaTw",
+      "authorship_tag": "ABX9TyPHU3Ag1OffpCNt+c0YzWis",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "B9402AX88M5N"
       },
-      "execution_count": 19,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -61,7 +61,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "440d4a7f-7b84-4ee6-d39b-379d042990f0"
+        "outputId": "dfc2d313-c6e0-4a12-abfb-5e66a769fa20"
       },
       "outputs": [
         {
@@ -223,7 +223,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "60ddfda1-cb48-47ca-aaa9-09d22cdab7d8"
+        "outputId": "265a8f05-d899-4552-e52a-5453f6ab9936"
       },
       "execution_count": 4,
       "outputs": [
@@ -303,7 +303,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "17e57d3c-e06e-4287-ee9e-5e0fe923fabb"
+        "outputId": "46e7f26c-aeb1-47b1-8147-0b0feae85d25"
       },
       "execution_count": 5,
       "outputs": [
@@ -441,7 +441,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a80b0eea-3b4e-49cf-9c00-ddae2c54e10d"
+        "outputId": "35221468-685f-460a-e12b-d8368f625327"
       },
       "execution_count": 6,
       "outputs": [
@@ -654,7 +654,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d772a9d4-38d1-4b2e-bff2-1a719913dfbe"
+        "outputId": "6eb3ce81-9d0d-4ce2-b90c-f250383491de"
       },
       "execution_count": 7,
       "outputs": [
@@ -778,7 +778,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "13da0e38-4db6-4159-8314-05ba64c60a6b"
+        "outputId": "81f49cd0-0ae2-461a-e71b-8bec67238ed5"
       },
       "execution_count": 8,
       "outputs": [
@@ -835,7 +835,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KzvslsO4nTJL",
-        "outputId": "d2dc0f6e-0eae-4b93-9b5e-d554ac71c5c1"
+        "outputId": "32cd3894-9fd1-42e9-e112-1c2ef40eb9c3"
       },
       "execution_count": 9,
       "outputs": [
@@ -900,7 +900,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MLlas76CcGLJ",
-        "outputId": "e211608a-b0a1-4302-b55e-f8c1b2d8c5ae"
+        "outputId": "828058a8-064b-475b-f188-ae5f191ed409"
       },
       "execution_count": 10,
       "outputs": [
@@ -1039,7 +1039,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CJ0t1UlRhDHP",
-        "outputId": "6d839799-0b46-422e-8c91-f5f20d85d781"
+        "outputId": "59844bbc-28f0-4989-e8ee-163b482af984"
       },
       "execution_count": 11,
       "outputs": [
@@ -1096,7 +1096,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eVdGxpT-lx6D",
-        "outputId": "fa74a970-5a05-4c94-f1bf-a858b5ab097b"
+        "outputId": "8d60226e-2a0d-4637-945a-f45048bccd8e"
       },
       "execution_count": 12,
       "outputs": [
@@ -1208,7 +1208,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eNMZxPMjnAP_",
-        "outputId": "c08c1dc1-30d1-4b53-d23e-9686cf6d6807"
+        "outputId": "1396b971-36d1-43d1-918a-4279ffc29b0c"
       },
       "execution_count": 13,
       "outputs": [
@@ -1282,19 +1282,19 @@
         "  # get tensors from uploaded image\n",
         "  inf_img, plot_img = _upload_image()\n",
         "\n",
-        "  #______________MAKE INFERENCE__________\n",
+        "  #_____MAKE INFERENCE_____\n",
         "  with torch.inference_mode():\n",
         "    model.to(device)\n",
         "    # make prediction\n",
-        "    y_pred = model(inf_img.unsqueeze(0).to(device))\n",
+        "    logits = model(inf_img.unsqueeze(0).to(device))\n",
         "    # scale logits on 0 -> scale\n",
-        "    logits = F.softmax(y_pred, dim=1)\n",
+        "    logits = F.softmax(logits, dim=1)\n",
         "\n",
         "    # label & class probability\n",
-        "    label = logits.argmax(dim=1).item()\n",
+        "    y_pred = logits.argmax(dim=1).item()\n",
         "    class_prob = logits.max().item()\n",
         "\n",
-        "    #_____________PROBABILITY THRESHOLD (Out Of Distribution Detection)___\n",
+        "    #_____PROBABILITY THRESHOLD (Out Of Distribution Detection)_____\n",
         "    if class_prob < 0.85:\n",
         "      err_msg = 'The image uploaded is most likely NOT of a valid PLAYING CARD\\n\\nRE-RUN THE CODE CELL AND UPLOAD A VALID PLAYING CARD IMAGE'\n",
         "      raise Exception(err_msg)\n",
@@ -1302,7 +1302,7 @@
         "    # get top5 indices & values from logits\n",
         "    top5 = logits.topk(5)\n",
         "\n",
-        "  #________________MAKE DATAFRAME__________\n",
+        "  #_____MAKE DATAFRAME_____\n",
         "  # make a dataframe out of the top5 predictions & probabilities\n",
         "  df = pd.DataFrame({\n",
         "      'Classes': [label_mapper[c.item()].title() for c in top5.indices.squeeze()],\n",
@@ -1311,7 +1311,7 @@
         "  # sort dataframe in decsending order\n",
         "  df.sort_values(by='Probabilities', ascending=False, inplace=True)\n",
         "\n",
-        "  #________________PLOT__________________\n",
+        "  #_____PLOT_____\n",
         "  # set up figure, gridspec, axes\n",
         "  f = plt.figure(figsize=(9, 3), layout='compressed')\n",
         "  gs = GridSpec(figure=f, nrows=1, ncols=2, width_ratios=[1,3], wspace=0.05)\n",
@@ -1319,7 +1319,7 @@
         "  ax2 = f.add_subplot(gs[1])\n",
         "\n",
         "  # plot the card\n",
-        "  ax1.set_title(f'Predicted: {label_mapper[label].title()}\\nProbability: {class_prob:.2f}',\n",
+        "  ax1.set_title(f'Predicted: {label_mapper[y_pred].title()}\\nProbability: {class_prob:.2f}',\n",
         "            fontsize=8.5, weight='black', color='#de3163')\n",
         "  ax1.axis(False)\n",
         "  ax1.imshow(plot_img.permute(1,2,0).clamp(min=0, max=1.0))\n",
@@ -1343,7 +1343,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E85ZazEeprwO",
-        "outputId": "44b5458e-a158-4391-90c0-1b535d585a39"
+        "outputId": "85a97ad0-fc73-48e5-fd96-1ce72670fd2f"
       },
       "execution_count": 14,
       "outputs": [
@@ -1423,7 +1423,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hGGwUg_ebUDI",
-        "outputId": "0dd9f506-76d4-4803-e908-01f6f2558b77"
+        "outputId": "7b80a851-d3fd-461e-8f28-4093b2a07792"
       },
       "execution_count": 16,
       "outputs": [
@@ -1431,8 +1431,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 2.72 ms, sys: 0 ns, total: 2.72 ms\n",
-            "Wall time: 6.13 ms\n"
+            "CPU times: user 2.4 ms, sys: 49 µs, total: 2.45 ms\n",
+            "Wall time: 2.46 ms\n"
           ]
         }
       ]
