--- a/01 Cards modular.ipynb
+++ b/01 Cards modular.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHU3Ag1OffpCNt+c0YzWis",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyM9EO+3jUnKqpzZLbOEBDC8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1362,7 +1363,7 @@
         "> Here, we'll create a function to archive all the modules `*.py` files into a `*.zip` file with the help of [`make_archive`](https://docs.python.org/3/library/shutil.html#shutil.make_archive) function from the [`shutil`](https://docs.python.org/3/library/shutil.html#module-shutil) python module\n",
         "\n",
         "> ✋ **Info**\n",
-        "+ The `zip` file containing the helper modules will be then uploaded to the GitHub repository [here](https://github.com/Martinmbiro/XO-binary-classification/tree/main/helper%20modules). That way, the modules can be downloaded and extracted dynamically in code"
+        "+ The `zip` file containing the helper modules will be then uploaded to the GitHub repository [here](https://github.com/Martinmbiro/Card-classification/tree/main/helper%20modules). That way, the modules can be downloaded and extracted dynamically in code"
       ],
       "metadata": {
         "id": "KyrG_C_hni52"
