--- a/01 Cards modular.ipynb
+++ b/01 Cards modular.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM9EO+3jUnKqpzZLbOEBDC8",
+      "authorship_tag": "ABX9TyOnvjdU5hVEzWyZrmOX0cV7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dfc2d313-c6e0-4a12-abfb-5e66a769fa20"
+        "outputId": "51f54edf-da3c-450d-be35-ed3d13524c19"
       },
       "outputs": [
         {
@@ -223,7 +223,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "265a8f05-d899-4552-e52a-5453f6ab9936"
+        "outputId": "c0ea4763-d0a5-422a-ff2f-8bb050e76a84"
       },
       "execution_count": null,
       "outputs": [
@@ -280,8 +280,8 @@
         "    -------\n",
         "    tuple\n",
         "        A tuple containing three elements:\n",
-        "        - model (torch.nn.Module): The model initialized with the EfficientNet-B0 architecture for 53 classes.\n",
-        "        - opt (torch.optim.Optimizer): The AdamW optimizer initialized with the model's parameters.\n",
+        "        - model (torch.nn.Module): The model initialized with the resnet14t architecture for 53 classes.\n",
+        "        - opt (torch.optim.Optimizer): The Adam optimizer initialized with the model's parameters.\n",
         "        - loss_fn (torch.nn.Module): The CrossEntropyLoss function used for multi-class classification.\n",
         "    \"\"\"\n",
         "  # pretrained model, with 53 classes for output layer\n",
@@ -303,7 +303,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "46e7f26c-aeb1-47b1-8147-0b0feae85d25"
+        "outputId": "a3e0f1ea-a6b5-43d6-f1d8-fa41fee1d14b"
       },
       "execution_count": null,
       "outputs": [
@@ -441,7 +441,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "35221468-685f-460a-e12b-d8368f625327"
+        "outputId": "cfd053ec-bd06-47e8-e03b-24e8fb001248"
       },
       "execution_count": null,
       "outputs": [
@@ -654,7 +654,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6eb3ce81-9d0d-4ce2-b90c-f250383491de"
+        "outputId": "4b9695dd-3ea6-4d03-da3a-3fb16c234724"
       },
       "execution_count": null,
       "outputs": [
@@ -778,7 +778,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "81f49cd0-0ae2-461a-e71b-8bec67238ed5"
+        "outputId": "aff0b4d9-1e8d-481f-c5df-4a46399a9ad0"
       },
       "execution_count": null,
       "outputs": [
@@ -835,7 +835,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KzvslsO4nTJL",
-        "outputId": "32cd3894-9fd1-42e9-e112-1c2ef40eb9c3"
+        "outputId": "712d9c9c-e9a0-405e-9e67-8eb2b7900c9f"
       },
       "execution_count": null,
       "outputs": [
@@ -900,7 +900,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MLlas76CcGLJ",
-        "outputId": "828058a8-064b-475b-f188-ae5f191ed409"
+        "outputId": "adf9b0c6-fadc-4939-b3e8-39b90f2829e1"
       },
       "execution_count": null,
       "outputs": [
@@ -1039,7 +1039,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CJ0t1UlRhDHP",
-        "outputId": "59844bbc-28f0-4989-e8ee-163b482af984"
+        "outputId": "fbcc05b9-4e25-4f6b-c623-ac8ca8cd06d9"
       },
       "execution_count": null,
       "outputs": [
@@ -1096,7 +1096,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eVdGxpT-lx6D",
-        "outputId": "8d60226e-2a0d-4637-945a-f45048bccd8e"
+        "outputId": "1179f6d0-8b7b-4309-d65e-2bc5267e562a"
       },
       "execution_count": null,
       "outputs": [
@@ -1208,7 +1208,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eNMZxPMjnAP_",
-        "outputId": "1396b971-36d1-43d1-918a-4279ffc29b0c"
+        "outputId": "d1b044e0-31f1-454d-cd8d-83d598c46a56"
       },
       "execution_count": null,
       "outputs": [
@@ -1284,6 +1284,7 @@
         "\n",
         "  #_____MAKE INFERENCE_____\n",
         "  with torch.inference_mode():\n",
+        "    model.eval() # eval mode\n",
         "    model.to(device)\n",
         "    # make prediction\n",
         "    logits = model(inf_img.unsqueeze(0).to(device))\n",
@@ -1295,8 +1296,8 @@
         "    class_prob = logits.max().item()\n",
         "\n",
         "    #_____PROBABILITY THRESHOLD (Out Of Distribution Detection)_____\n",
-        "    if class_prob < 0.85:\n",
-        "      err_msg = 'The image uploaded is most likely NOT of a valid PLAYING CARD\\n\\nRE-RUN THE CODE CELL AND UPLOAD A VALID PLAYING CARD IMAGE'\n",
+        "    if class_prob < 0.50:\n",
+        "      err_msg = 'The image uploaded is most likely NOT of a clear / valid PLAYING CARD\\n\\nRE-RUN THE CODE CELL AND UPLOAD A VALID PLAYING CARD IMAGE'\n",
         "      raise Exception(err_msg)\n",
         "\n",
         "    # get top5 indices & values from logits\n",
@@ -1343,7 +1344,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E85ZazEeprwO",
-        "outputId": "85a97ad0-fc73-48e5-fd96-1ce72670fd2f"
+        "outputId": "0b54d818-bd6d-48ee-cc40-9c9f110552a2"
       },
       "execution_count": null,
       "outputs": [
@@ -1423,7 +1424,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hGGwUg_ebUDI",
-        "outputId": "7b80a851-d3fd-461e-8f28-4093b2a07792"
+        "outputId": "b0add6fb-87b1-4197-b08e-c2db0e600c70"
       },
       "execution_count": null,
       "outputs": [
@@ -1431,8 +1432,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 2.4 ms, sys: 49 µs, total: 2.45 ms\n",
-            "Wall time: 2.46 ms\n"
+            "CPU times: user 828 µs, sys: 1.97 ms, total: 2.79 ms\n",
+            "Wall time: 4.26 ms\n"
           ]
         }
       ]
